feat(catalog): aggiunge classificazione GEBAN ad albero
